[project]
name = "Blind_watermark_Comfyui"
description = "A powerful blind watermark plugin for ComfyUI that allows you to embed and extract invisible watermarks in images using frequency domain techniques (DWT-DCT-SVD)."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.17.0", "opencv-python", "setuptools", "PyWavelets", "qrcode[pil]>=7.3.1", "pyzbar>=0.1.9"]

[project.urls]
Repository = "https://github.com/TianDongL/Blind_watermark_Comfyui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/TianDongL/Blind_watermark_Comfyui/wiki"
"Bug Tracker" = "https://github.com/TianDongL/Blind_watermark_Comfyui/issues"

[tool.comfy]
PublisherId = "tiandong1234"
DisplayName = "Blind_watermark_Comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

